--- a/anvil-cli/Cargo.toml
+++ b/anvil-cli/Cargo.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-#anvil = { path = ".." }
 tokio = { version = "1", features = ["full"] }
 clap = { version = "4.5", features = ["derive", "env"] }
 tonic = "0.14.2"
@@ -13,6 +12,7 @@ anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 confy = "0.6.1"
+anvil = { path = "../anvil" }
 
 [build-dependencies]
 tonic-build = "0.14.2"
