--- a/anvil/Cargo.toml
+++ b/anvil/Cargo.toml
@@ -71,6 +71,8 @@ dotenvy = "0.15.7"
 futures-core = "0.3.31"
 time = "0.3.44"
 futures-util = "0.3.31"
+hf-hub = "0.3"
+globset = "0.4"
 
 local-ip-address = "0.6.5"
 reqwest = "0.12.23"
