--- a/anvil-cli/Cargo.toml
+++ b/anvil-cli/Cargo.toml
@@ -12,6 +12,8 @@ anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 confy = "0.6.1"
+dialoguer = "0.11.0"
+tokio-stream = "0.1"
 anvil = { path = "../anvil" }
 
 [build-dependencies]
