Refactor workspace for open-core model
     This commit completes a major architectural refactoring to prepare the Anvil workspace for an open-core model, separating the foundational components from future enterprise
      extensions.

     The key changes include:

     - **Crate Separation:** The original `anvil` crate has been split into `anvil-core` (a pure library containing the fundamental structs, traits, and managers) and `anvil` (the main
      binary application that depends on `anvil-core`).

     - **Enterprise Feature Flag:** An `enterprise` feature flag has been added to the `anvil` crate. When enabled, it activates an optional dependency on the `anvil-enterprise` crate,
      allowing for the seamless addition of enterprise-specific services and logic.

    - **Test Harness Migration:** The test utilities have been extracted into a dedicated `anvil-test-utils` crate, which is now used by all integration tests across the workspace.

    - **Build Fixes:** Resolved numerous compilation, dependency, and routing issues that arose during the refactoring, resulting in a stable build where all original OSS tests now pass
      successfully on the new architecture.

    This new structure provides a clean and maintainable foundation for building and releasing both open-source and commercial versions of Anvil from a unified codebase.

--- a/anvil-test-utils/Cargo.toml
+++ b/anvil-test-utils/Cargo.toml
@@ -20,3 +20,6 @@ refinery-macros = "0.8.12"
 uuid = { version = "1.18.1", features = ["v4"] }
 dotenvy = "0.15.7"
 libp2p = { version = "0.56.0", features = ["gossipsub", "mdns", "tcp", "tokio", "macros", "noise", "yamux", "quic"] }
+tonic = "0.14.2"
+tracing = { version = "0.1.16" }
+tracing-subscriber = { version = "0.3", features = ["tracing-log", "fmt", "env-filter"] }
