Expose interceptor handle and wire enterprise route extender; enable enterprise in tests
      - anvil-core: export cloneable AuthInterceptorFn and return it from create_grpc_router
      - anvil: pass core-provided interceptor into enterprise extender and serve merged Routes
      - test-utils: enable anvil crate’s enterprise feature so TestCluster includes enterprise services
      - Rationale: stable, scalable extension point for enterprise gRPC services and consistent middleware

--- a/anvil-test-utils/Cargo.toml
+++ b/anvil-test-utils/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-anvil = { path = "../anvil" }
+# Ensure tests exercise the enterprise-extended server by enabling the feature.
+anvil = { path = "../anvil", features = ["enterprise"] }
 anvil-core = { path = "../anvil-core" }
 anyhow = "1"
 tokio = { version = "1.47.1", features = ["full"] }
