--- a/anvil-test-utils/Cargo.toml
+++ b/anvil-test-utils/Cargo.toml
@@ -4,8 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-# Ensure tests exercise the enterprise-extended server by enabling the feature.
-anvil = { path = "../anvil", features = ["enterprise"] }
+anvil = { path = "../anvil" }
 anvil-core = { path = "../anvil-core" }
 anyhow = "1"
 tokio = { version = "1.47.1", features = ["full"] }
