--- a/anvil-test-utils/Cargo.toml
+++ b/anvil-test-utils/Cargo.toml
@@ -3,6 +3,9 @@ name = "anvil-test-utils"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+enterprise =["anvil/enterprise"]
+
 [dependencies]
 # Ensure tests exercise the enterprise-extended server by enabling the feature.
 anvil = { path = "../anvil", features = ["enterprise"] }
