--- a/anvil/Cargo.toml
+++ b/anvil/Cargo.toml
@@ -69,7 +69,7 @@ bytes = { version = "1", optional = true }
 h2 = { version = "0.4", optional = true }
 tokio-rustls = { version = "0.26.1", optional = true, features = ["ring", "tls12"], default-features = false }
 hyper-rustls = { version = "0.27.0", features = ["http2", "ring", "tls12"], optional = true, default-features = false }
-tower-http = { version = "0.6", optional = true }
+tower-http = { version = "0.6", optional = true, features = ["sensitive-headers"] }
 uuid = { version = "1.18.1", features = ["v4", "serde"] }
 dotenvy = "0.15.7"
 futures-core = "0.3.31"
