--- a/anvil/Cargo.toml
+++ b/anvil/Cargo.toml
@@ -107,6 +107,7 @@ aes-gcm = "0.10.3"
 constant_time_eq = "0.4.2"
 http-body-util = "0.1.1"
 subtle = "2.6.1"
+once_cell = "1.19"
 
 [build-dependencies]
 tonic-prost-build = { version = "0.14.2" }
