Implement FFI streaming loader with Python SDK
This commit introduces a significant enhancement to the Anvil streaming core by implementing a new FFI (Foreign Function Interface) layer with caching and
      metrics. This FFI is consumed by a new Python SDK, `anvil-torch`, which provides a lazy-loading mechanism for PyTorch tensors, enabling more efficient memory
      usage and faster model loading for large models.

Key changes include:

- **FFI Layer (`anvil-ffi`):**
     - Implemented a new FFI with an `AnvilTensor` struct for binary-safe data transfer.
     - Added an LRU cache for tensors to reduce redundant data fetching.
     - Introduced metrics for cache hits, misses, and bytes fetched.
     - Improved error handling with `last_error_message`.

 - **Python SDK (`anvil-sdk-py`):**
     - Created the `anvil-torch` package with an `AnvilLoaderWrapper` to interface with the new FFI.
     - Implemented `enable`, `metrics`, and `load_from_anvil` functions for seamless PyTorch integration.
     - Added end-to-end tests for streaming inference with PyTorch models.

 - **Build and Test Infrastructure (`Justfile`):**
     - Added a comprehensive set of `just` commands for end-to-end testing using Docker Compose.
     - New commands streamline the process of bootstrapping Anvil, managing Hugging Face model ingestion, and running integration tests.

 - **Enterprise Features:**
     - Implemented pagination for the `list_tensors` service in `anvil-enterprise`.

 - **Bug Fixes and Refinements:**
     - Updated `ObjectRef` to use `Option<String>` for `version_id` to avoid empty strings.
     - Corrected linker arguments for macOS in `anvil-sdk-py-bindings`.

--- a/anvil/Dockerfile
+++ b/anvil/Dockerfile
@@ -1,39 +1,33 @@
-# This Dockerfile is for the runtime image only.
-# It expects that the binaries have already been compiled on the host.
-# The path to the binaries can be passed in via the BINARY_PATH build argument.
-FROM debian:bookworm-slim
-ARG BINARY_PATH=./target/release
+# Stage 1: Build the binaries
+FROM rust:latest AS builder
 
-# Install runtime dependencies required by the host-built binaries and tests
-# - libssl3: OpenSSL 3 (TLS)
-# - libgcc-s1, libstdc++6: C++ runtime and GCC support libs used by glibc-linked Rust binaries
-# - ca-certificates: TLS roots for outbound HTTPS in tests/clients
-# - curl: used by the container healthcheck in docker-compose.test.yml
-RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
-        libssl3 \
-        libgcc-s1 \
-        libstdc++6 \
-        ca-certificates \
-        curl \
-    && rm -rf /var/lib/apt/lists/*
+# Install build dependencies
+RUN apt-get update && apt-get install -y build-essential pkg-config libssl-dev protobuf-compiler
 
-# Stash pre-compiled artifacts from the build context, then locate executables robustly.
-COPY ${BINARY_PATH}/ /tmp/build/
+WORKDIR /usr/src/anvil
 
-# Find the actual executable files named 'anvil' and 'admin' within the copied tree
-# and place them at fixed paths in the runtime image.
-RUN set -eux; \
-    anvil_src=$(find /tmp/build -type f -name anvil -perm -111 | head -n1); \
-    admin_src=$(find /tmp/build -type f -name admin -perm -111 | head -n1); \
-    test -n "$anvil_src" && test -n "$admin_src"; \
-    install -m 0755 "$anvil_src" /usr/local/bin/anvil; \
-    install -m 0755 "$admin_src" /usr/local/bin/admin; \
-    rm -rf /tmp/build
+# Copy the entire project
+COPY . .
 
-# Expose the default gRPC/S3 port and the QUIC P2P port
+# Build the anvil server and the admin CLI in release mode
+RUN cargo build --release --bin anvil --bin admin
+
+# Stage 2: Create the final, minimal image
+FROM rust:latest
+
+# Remove build dependencies and clean up apt caches
+RUN apt-get update && apt-get purge -y build-essential pkg-config libssl-dev protobuf-compiler && \
+    apt-get autoremove -y && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
+# Copy the compiled binaries from the builder stage
+COPY --from=builder /usr/src/anvil/target/release/anvil /usr/local/bin/anvil
+COPY --from=builder /usr/src/anvil/target/release/admin /usr/local/bin/admin
+
+# Expose the default gRPC/S3 port and a potential swarm port
 EXPOSE 50051
-EXPOSE 7443/udp
+EXPOSE 7443
 
 # Set the default command to run the anvil server
 CMD ["anvil"]
