--- a/anvil-cli/Cargo.toml
+++ b/anvil-cli/Cargo.toml
@@ -15,6 +15,12 @@ confy = "0.6.1"
 dialoguer = "0.11.0"
 tokio-stream = "0.1"
 anvil = { path = "../anvil" }
+tempfile = "3.10.1"
 
 [build-dependencies]
 tonic-build = "0.14.2"
+
+[[test]]
+name = "confy_test"
+path = "tests/confy_test.rs"
+harness = true
