--- a/anvil-core/Cargo.toml
+++ b/anvil-core/Cargo.toml
@@ -77,7 +77,7 @@ hf-hub = "0.4.3"
 globset = "0.4"
 
 local-ip-address = "0.6.5"
-reqwest = "0.12.23"
+reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls"] }
 trust-dns-resolver = "0.23.2"
 async-trait = "0.1.89"
 libp2p = { version = "0.56.0", features = ["gossipsub", "mdns", "tcp", "tokio", "macros", "noise", "yamux", "quic"] }
