--- a/anvil/Cargo.toml
+++ b/anvil/Cargo.toml
@@ -79,7 +79,7 @@ hf-hub = "0.4.3"
 globset = "0.4"
 
 local-ip-address = "0.6.5"
-reqwest = "0.12.23"
+reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls"] }
 trust-dns-resolver = "0.23.2"
 async-trait = "0.1.89"
 libp2p = { version = "0.56.0", features = ["gossipsub", "mdns", "tcp", "tokio", "macros", "noise", "yamux", "quic"] }
@@ -108,6 +108,7 @@ constant_time_eq = "0.4.2"
 http-body-util = "0.1.1"
 subtle = "2.6.1"
 once_cell = "1.19"
+openssl = { version = "0.10", features = ["vendored"] }
 
 [build-dependencies]
 tonic-prost-build = { version = "0.14.2" }
@@ -117,11 +118,11 @@ anvil-test-utils = { path = "../anvil-test-utils" }
 aws-config = "1.1.7"
 aws-sdk-s3 = "1.18.0"
 http-body-util = "0.1.1"
-anvil = { path = "." }
 # serial_test = "3.0.0"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 memchr = "2.7.6"
 
-uuid = { version = "1.18.1", features = ["v4"] }
+uuid = { version = "1.18.1", features = ["v4", "serde"] }
 tokio-stream = "0.1"
 tempfile = "3.10.1"
+serde_json = "1.0"
