--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ permissions:
 
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest
+    runs-on: worka-l1
 
     services:
       postgres:
@@ -95,7 +95,7 @@ jobs:
         ANVIL_IMAGE: ${{ steps.img.outputs.tag }}
       run: cargo test --workspace -- --nocapture
 
-    # --- Release Steps --- 
+    # --- Release Steps ---
     # These steps will only run on a successful push to the main branch.
 
     - name: Log in to GitHub Container Registry
