--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,8 +39,8 @@ jobs:
     - name: Setup Rust
       uses: dtolnay/rust-toolchain@stable
 
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
+    # - name: Set up QEMU
+    #   uses: docker/setup-qemu-action@v3
 
     - name: Install Protoc
       uses: arduino/setup-protoc@v2
@@ -75,10 +75,10 @@ jobs:
         file: anvil/Dockerfile
 #        Triggers Error: buildx failed with: ERROR: failed to build: docker exporter does not currently support exporting manifest lists
 #        https://github.com/docker/buildx/issues/59
-#        load: true
-        push: false
-        tags: ${{ steps.img.outputs.tag }}
-        platforms: linux/amd64,linux/arm64
+        load: 'true' #When ARM support is re-enabled, this needs to be disabled
+        push: 'false'
+#        # platforms: linux/amd64,linux/arm64
+        platforms: linux/amd64
 
     - name: Validate runtime binary in image
       run: |
@@ -133,9 +133,17 @@ jobs:
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
-        platforms: linux/amd64,linux/arm64
+        # platforms: linux/amd64,linux/arm64
+        platforms: linux/amd64
         cache-from: type=gha
         cache-to: type=gha,mode=max
+
+    - name: Prepare Release Assets
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      run: |
+        mkdir -p release
+        docker cp $(docker create ${{ steps.meta.outputs.tags }}):/usr/local/bin/anvil-cli release/anvil
+        docker cp $(docker create ${{ steps.meta.outputs.tags }}):/usr/local/bin/admin release/anvil-admin
 
     - name: Create GitHub Release
       if: github.event_name == 'push' && github.ref == 'refs/heads/main'
@@ -151,3 +159,6 @@ jobs:
           ```sh
           docker pull ghcr.io/${{ github.repository }}:${{ steps.tag.outputs.tag_name }}
           ```
+        files: |
+          release/anvil
+          release/anvil-admin
