--- a/anvil-cli/Cargo.toml
+++ b/anvil-cli/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 clap = { version = "4.5", features = ["derive", "env"] }
-tonic = "0.14.2"
+tonic = { version = "0.14.2", default-features = false, features = ["transport", "tls-native-roots"] }
 prost = "0.14.1"
 anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
