--- a/anvil-core/Cargo.toml
+++ b/anvil-core/Cargo.toml
@@ -51,6 +51,8 @@ lazy_static = { version = "1.5.0" }
 
 async-stream = { version = "0.3", optional = true }
 tokio-stream = { version = "0.1", optional = true }
+
+tempfile = "3.10.1"
 tokio-util = { version = "0.7.8", optional = true }
 tower = { version = "0.5", optional = true }
 rand = { version = "0.9", optional = true }
